--- a/css/main.css
+++ b/css/main.css
@@ -2,8 +2,8 @@
     --color-background: white;
     --color-on-background: black;
     --color-background-hover: #eee;
-    --color-on-background-hover: black;
-    --color-primary: #0066ff;
+    --color-on-background-hover: #fff154;
+    --color-primary: #f6ff00;
     --color-on-primary: white;
     --color-error: #de0000;
     --color-on-error: white;
@@ -12,15 +12,14 @@
 main.dark,
 header.dark {
     color-scheme: dark;
-    --color-background: #1c1b1f;
+    --color-background: #333333;
     --color-on-background: white;
-    --color-background-hover: #27262c;
-    --color-on-background-hover: white;
-    --color-primary: #283593;
-    --color-primary-disabled: #1f213c;
-    --color-on-primary: white;
+    --color-background-hover: black;
+    --color-on-background-hover: #fff154;
+    --color-primary: #f6ff00;
+    --color-on-primary: black;
     --color-error: #de0000;
-    --color-on-error: white;
+    --color-on-error: #333333;
 }
 
 html,
@@ -39,10 +38,7 @@ main {
     background-color: var(--color-background);
     color: var(--color-on-background);
     display: grid;
-    grid-template-columns: minmax(16rem, 1fr) minmax(16rem, 2fr) minmax(
-            16em,
-            1fr
-        );
+    grid-template-columns: minmax(16rem, 1fr) minmax(16rem, 2fr) minmax(16em, 1fr);
     column-gap: 2rem;
 }
 
@@ -53,12 +49,14 @@ header {
     background-color: var(--color-primary);
     color: var(--color-on-primary);
 }
+
 @media screen and (min-width: 1366px) {
     header {
         display: grid;
         padding-inline: 0;
     }
 }
+
 header .logo {
     justify-self: end;
     align-self: center;
@@ -66,6 +64,7 @@ header .logo {
     align-items: flex-end;
     gap: 1rem;
 }
+
 header .nav {
     flex: 1;
 }
@@ -77,6 +76,7 @@ main {
     grid-template-rows: minmax(0, 1fr);
     column-gap: 2rem;
 }
+
 main > div {
     overflow-y: auto;
 }
