Bisey yaptim yes beeee

--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@
     --color-background: white;
     --color-on-background: black;
     --color-background-hover: #eee;
-    --color-on-background-hover: #fff154;
+    --color-on-background-hover: #ddca00;
     --color-primary: #f6ff00;
     --color-on-primary: white;
     --color-error: #de0000;
